fixed extra padding to the right of map, fixed scroll so map scrolls under path and menu

--- a/style.css
+++ b/style.css
@@ -36,13 +36,13 @@ a {
 
 .map {
   grid-area: main;
-  padding: 10px;
     display: inline-block;
     position: relative;
     width: 100%;
     padding-bottom: 100%;
     vertical-align: top;
     overflow: hidden;
+    z-index: -1;
 }
 
 .svg-content {
